@@ -23,4 +23,9 @@
   default_columns: 4
   days_between_washes: 28
   runs_between_washes: 1
-
+- id_instrument_format: 19
+  id_manufacturer: 21
+  model: 'AVITI24'
+  iscurrent: 1
+  default_columns: 0
+  default_tiles: 0
